--- a/css/styles.css
+++ b/css/styles.css
@@ -224,6 +224,7 @@ footer {
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
