hover colour fixed

--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -1,5 +1,6 @@
-$color-alba-green: #709D30;
+$color-alba-green: #709d30;
+$color-green-hover: #b0d67b;
 $color-dark-steel: #263238;
 $color-black: #070707;
-$color-outer-bg: #DADADA;
-$color-light-grey: #F1F1F1;
+$color-outer-bg: #dadada;
+$color-light-grey: #f1f1f1;
