--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,114 +1,106 @@
 /* ----- HEADER ----- */
 
 header {
-    width: 100%;
-    height: 70px;
-    background-color: $color-alba-green;
-    position: fixed;
-    top: 0;
-    z-index: 999;
-    overflow: hidden;
-    transition: all 0.3s ease-in-out;
-    border-bottom: solid 1px $color-black;
+  width: 100%;
+  height: 70px;
+  background-color: $color-alba-green;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+  border-bottom: solid 1px $color-black;
 
-    a {
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-    
-    
-    .container {
-        flex-direction: column;
+  a {
+    font-weight: 700;
+    text-transform: uppercase;
+  }
 
-        .compact-menu {
-            height: 70px;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 5px 20px;
+  .container {
+    flex-direction: column;
 
-            .menu-icon {
-                cursor: pointer;
-            }
+    .compact-menu {
+      height: 70px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 5px 20px;
 
-            .logo {
-                height: 40px;
-            }
-        }
-        
-        .menu-links {
-            padding: 5px 20px 40px 20px;
+      .menu-icon {
+        cursor: pointer;
+      }
 
-            nav {
-                ul {
-                    list-style: none;
-                    display: flex;
-                    flex-direction: column;
-
-                    li {
-                        margin: 0.5rem auto;
-                    }
-                }
-            }
-            
-        }
-
+      .logo {
+        height: 40px;
+      }
     }
 
+    .menu-links {
+      padding: 5px 20px 40px 20px;
+
+      nav {
+        ul {
+          list-style: none;
+          display: flex;
+          flex-direction: column;
+
+          li {
+            margin: 0.5rem auto;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (hover: hover) {
-    header nav a:hover {
-        color: $color-alba-green;
-    }
+  header nav a:hover {
+    color: $color-green-hover;
+  }
 }
 
 .header-open {
-    height: 320px;
+  height: 320px;
 }
-
 
 /* ----- MENU RESPONSIVE ----- */
 
 @media only screen and (min-width: 640px) {
+  header {
+    flex-direction: row;
 
-    header {
-        flex-direction: row;
+    .container {
+      flex-direction: row;
+      justify-content: space-between;
 
-        .container {
-            flex-direction: row;
-            justify-content: space-between;
+      .compact-menu {
+        width: auto;
 
-            .compact-menu {
-                width: auto;
-    
-                .menu-icon {
-                    display: none;
-                }
-            }
-    
-            .menu-links {
-                padding: 5px 20px;
-    
-                nav {
-                    ul {
-                        flex-direction: row;
-    
-                        li {
-                            margin: 0 auto 0 20px;
-                        }
-                    }
-                }
-            }
+        .menu-icon {
+          display: none;
         }
+      }
 
+      .menu-links {
+        padding: 5px 20px;
+
+        nav {
+          ul {
+            flex-direction: row;
+
+            li {
+              margin: 0 auto 0 20px;
+            }
+          }
+        }
+      }
     }
-
+  }
 }
 
 @media only screen and (min-width: 760px) {
-    header {
-        padding: 0 20px;
-    }
+  header {
+    padding: 0 20px;
+  }
 }
