--- a/sass/styles.css
+++ b/sass/styles.css
@@ -4,7 +4,7 @@ html, body {
   font-weight: 600;
   line-height: 1.5;
   color: #070707;
-  background-color: #DADADA;
+  background-color: #dadada;
   scroll-behavior: smooth;
 }
 
@@ -36,7 +36,6 @@ h1 {
   position: relative;
   display: inline-block;
 }
-
 h1::after {
   content: "";
   position: absolute;
@@ -45,8 +44,7 @@ h1::after {
   bottom: -15px;
   left: 50%;
   background-color: #070707;
-  -webkit-transform: scaleY(1) translate(-50%, -50%) skew(-15deg, 2deg);
-          transform: scaleY(1) translate(-50%, -50%) skew(-15deg, 2deg);
+  transform: scaleY(1) translate(-50%, -50%) skew(-15deg, 2deg);
   z-index: -1;
 }
 
@@ -84,23 +82,16 @@ main, footer {
 }
 
 main {
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
 }
 
 .container {
   max-width: 1200px;
   margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 /* ----- ALL SECTIONS----- */
@@ -113,24 +104,20 @@ section .heading-align {
   width: -moz-max-content;
   width: -webkit-max-content;
 }
-
 section .container .description {
   width: 100%;
   max-width: 600px;
   margin-bottom: 40px;
 }
-
 section .container .description span {
   font-weight: 700;
 }
-
 section .container .image {
   width: 100%;
   padding-top: 75%;
   overflow: hidden;
   position: relative;
 }
-
 section .container .image img {
   width: 100%;
   height: 100%;
@@ -139,12 +126,8 @@ section .container .image img {
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 section .reversed-row {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .services,
@@ -158,18 +141,15 @@ footer {
 /* ----- RESPONSIVE ALL SECTIONS----- */
 @media only screen and (min-width: 760px) {
   .services,
-  .about,
-  .projects,
-  .contact {
+.about,
+.projects,
+.contact {
     padding: 120px 40px;
   }
 }
-
 @media only screen and (min-width: 1000px) {
   section .container {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   section .container .description {
     width: 36%;
@@ -180,81 +160,56 @@ footer {
     padding-top: 45%;
   }
 }
-
 /* ----- HEADER ----- */
 header {
   width: 100%;
   height: 70px;
-  background-color: #709D30;
+  background-color: #709d30;
   position: fixed;
   top: 0;
   z-index: 999;
   overflow: hidden;
-  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   border-bottom: solid 1px #070707;
 }
-
 header a {
   font-weight: 700;
   text-transform: uppercase;
 }
-
 header .container {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
 header .container .compact-menu {
   height: 70px;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding: 5px 20px;
 }
-
 header .container .compact-menu .menu-icon {
   cursor: pointer;
 }
-
 header .container .compact-menu .logo {
   height: 40px;
 }
-
 header .container .menu-links {
   padding: 5px 20px 40px 20px;
 }
-
 header .container .menu-links nav ul {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-
 header .container .menu-links nav ul li {
   margin: 0.5rem auto;
 }
 
 @media (hover: hover) {
   header nav a:hover {
-    color: #709D30;
+    color: #b0d67b;
   }
 }
-
 .header-open {
   height: 320px;
 }
@@ -262,19 +217,11 @@ header .container .menu-links nav ul li {
 /* ----- MENU RESPONSIVE ----- */
 @media only screen and (min-width: 640px) {
   header {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    flex-direction: row;
   }
   header .container {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-between;
   }
   header .container .compact-menu {
     width: auto;
@@ -286,22 +233,17 @@ header .container .menu-links nav ul li {
     padding: 5px 20px;
   }
   header .container .menu-links nav ul {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    flex-direction: row;
   }
   header .container .menu-links nav ul li {
     margin: 0 auto 0 20px;
   }
 }
-
 @media only screen and (min-width: 760px) {
   header {
     padding: 0 20px;
   }
 }
-
 /* ----- HERO ----- */
 .hero,
 .hero-2 {
@@ -312,18 +254,13 @@ header .container .menu-links nav ul li {
   background-attachment: fixed;
   background-position: top center;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .hero {
   background-image: url("../assets/hero-cover.jpg");
 }
-
 .hero .hero-logo img {
   min-width: 150px;
   width: 15%;
@@ -332,8 +269,7 @@ header .container .menu-links nav ul li {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .hero-2 {
@@ -342,43 +278,31 @@ header .container .menu-links nav ul li {
 
 @supports (-webkit-touch-callout: none) {
   .hero,
-  .hero-2 {
+.hero-2 {
     background-attachment: scroll;
   }
 }
-
 @supports not (-webkit-touch-callout: none) {
   .hero,
-  .hero-2 {
+.hero-2 {
     background-attachment: fixed;
   }
 }
-
 /* ----- SERVICES ----- */
 .services {
   text-align: center;
 }
-
 .services h2 {
   width: 100%;
 }
-
 .services .container .structural-services {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
   margin-bottom: 40px;
 }
-
 .services .container .structural-services figure {
   max-width: 260px;
   margin: 0 auto 80px auto;
@@ -386,30 +310,23 @@ header .container .menu-links nav ul li {
 
 @media only screen and (min-width: 760px) {
   .services .container {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
   .services .container .structural-services figure {
     max-width: 240px;
   }
 }
-
 @media only screen and (min-width: 1000px) {
   .structural-services figure {
     max-width: 220px;
   }
 }
-
 /* ----- ABOUT ----- */
 .about {
-  background-color: #709D30;
+  background-color: #709d30;
 }
-
 .about .container {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
 }
 
 @media only screen and (min-width: 1000px) {
@@ -421,86 +338,62 @@ header .container .menu-links nav ul li {
     padding-top: 64%;
   }
 }
-
 /* ----- PROJECTS ----- */
 .projects h1 {
   margin-bottom: 120px;
 }
-
 .projects .container {
   margin-bottom: 120px;
 }
-
 .projects .container .project-gallery {
   width: calc(100vw - 20px);
   height: auto;
   position: relative;
 }
-
 .projects .container .project-gallery .slideshow-holder {
   position: relative;
   width: 100%;
   height: 60vw;
   margin-bottom: 10px;
-  background-color: #709D30;
+  background-color: #709d30;
 }
-
 .projects .container .project-gallery .slideshow-holder .slide-holder {
   height: 60vw;
   overflow: hidden;
   position: absolute;
-  -webkit-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
   opacity: 0;
 }
-
 .projects .container .project-gallery .slideshow-holder .slide-holder:first-of-type {
   opacity: 1;
 }
-
 .projects .container .project-gallery .slideshow-holder .slide-holder img {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .projects .container .project-gallery .controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .projects .container .project-gallery .controls .prev,
 .projects .container .project-gallery .controls .next {
   font-weight: 700;
-  background-color: #709D30;
+  background-color: #709d30;
   padding: 10px 15px;
   border: solid 1px #070707;
   border-radius: 100px;
   width: 48px;
   height: 48px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 .projects .container .project-gallery .controls .prev {
   border-radius: 70px 0 0 70px;
 }
-
 .projects .container .project-gallery .controls .next {
   border-radius: 0 70px 70px 0;
 }
@@ -523,16 +416,12 @@ header .container .menu-links nav ul li {
     height: 40vw;
   }
 }
-
 /* ----- CONTACT ----- */
 .contact {
-  background-color: #709D30;
+  background-color: #709d30;
 }
-
 .contact .container {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
 }
 
 @media only screen and (min-width: 1000px) {
@@ -544,15 +433,12 @@ header .container .menu-links nav ul li {
     padding-top: 64%;
   }
 }
-
 /* ----- FOOTER ----- */
 footer {
   text-align: center;
   background-color: #263238;
-  color: #709D30;
+  color: #709d30;
 }
-
 footer h5 {
   margin-bottom: 0;
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
